# Matterformer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.research/: current-focus.md  project.yaml
docs/: compact_simplicial_triton_delta_benchmark.md  hybrid_triton_implementation_request.md  modular_matterformer_hybrid_architecture.tex  platonic_fourier_mixed_backend_design.md  platonic_qm9_architecture.md  qm9_edm_matterformer_architecture.md  qm9_hybrid_sit_run_findings.md  single_stream_simplicial_tetra_architecture_proposal.md  synomol_transfer.md  synthmolforce.md
oracle_context/: MANIFEST.txt  fourier_backend_implementation_review_brief.md  fourier_direct_mixed_backend_findings.md  fourier_platonic_linear_oracle_brief.md  platonic_attention_modes_bench_20260516.json  usual_omol_h1920_l16_run_context.json
scripts/: benchmark_compact_simplicial_attention.py  benchmark_compact_simplicial_delta.sh  benchmark_fixed_k_geometry_cache.py  benchmark_grouped_compact_spherical.py  benchmark_omol_backend_matrix.py  benchmark_omol_fixed_k_local_vs_flash.py  benchmark_omol_mixed_backend.py  benchmark_omol_radius_sparse_vs_flash.py  benchmark_platonic_attention_modes.py  benchmark_platonic_fourier_linear.py  benchmark_platonic_radial_block_sweep.py  benchmark_platonic_radial_block_sweep_all6000.sh  benchmark_platonic_radial_patch_compare.py  benchmark_platonic_radial_patch_compare_all6000.sh  benchmark_platonic_rbf_type_bias.py  benchmark_platonic_rbf_type_bias_delta.sh  benchmark_platonic_rope_cache.py  benchmark_radius_sparse_attention.py  benchmark_simplicial_attention.py  (+76 more)
(+205 files in other folders)
